[project]
name = "Machine_Learning_exercise6"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Noel Hack", email = "Noel.hack12@gmail.com"},
]
dependencies = [
    "numpy>=2.1.3",
    "matplotlib>=3.9.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
